objects/Risk__c.object
<CustomObject>
    <fields>
        <fullName>Current_Process_Controls__c</fullName>
        <label>Current Process Controls</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detection__c</fullName>
        <label>Detection</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mitigation_Steps__c</fullName>
        <label>Mitigation Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Risk Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Occurence__c</fullName>
        <label>Occurrence</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offering_Release_ID__c</fullName>
        <label>Project ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offering_Release_Name__c</fullName>
        <formula>Offering_Release_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Cause_of_Failure__c</fullName>
        <label>Potential Cause of Failure</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Potential_Failure_Mode__c</fullName>
        <label>Potential Failure Mode</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Priority_Number__c</fullName>
        <formula>IF(ISBLANK(Text(Severity__c)), 1, VALUE(TEXT( Severity__c ))) * 
IF(ISBLANK(Text(Detection__c )), 1, VALUE(TEXT( Detection__c )))* 
IF(ISBLANK(Text(Occurence__c )), 1, VALUE(TEXT( Occurence__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Priority Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Target</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RISK-{0000000000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>